--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import './vendor/weather-icons.min.css';
 @import './variables.scss';
 @import './typography.scss';
 @import './global.scss';
