:cloud: UI Issues.

--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -4,6 +4,12 @@ body {
   position: relative;
 }
 
+@-moz-document url-prefix() {
+  body {
+    position: static;
+  }
+}
+
 .blurred {
   filter: blur(5px);
 }
